Add interactive timeline controls to sprint UI

--- a/tasker5000/index.html
+++ b/tasker5000/index.html
@@ -38,12 +38,15 @@
 
     <section class="card">
       <h2 class="card__title">Charts</h2>
-      <ul id="chartsList" class="list">No charts yet.</ul>
+      <ul id="chartsList" class="list list--stacked">No charts yet.</ul>
     </section>
 
-    <section class="card">
-      <h2 class="card__title">Timeline</h2>
-      <ul id="timelineList" class="list">No steps yet.</ul>
+    <section class="card timeline-card">
+      <div class="timeline-card__heading">
+        <h2 class="card__title">Timeline</h2>
+        <p class="card__hint">Actions from FMCA will appear here after you start.</p>
+      </div>
+      <ul id="timelineList" class="list list--timeline">No steps yet.</ul>
     </section>
 
     <p id="statusMessage" class="status">Ready.</p>
