--- a/tasker5000/index.html
+++ b/tasker5000/index.html
@@ -3,12 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FastAPI Sprint Launcher</title>
-  <!-- Minimal, mobile-first stylesheet -->
-  <link rel="stylesheet" href="style.css" />
+  <title>Tasker5000 Sprint Console</title>
+  <link rel="stylesheet" href="/static/style.css" />
 </head>
 <body>
   <header class="hud-bar" aria-label="Sprint heads-up display">
+    <nav class="nav" aria-label="Tasker5000 navigation">
+      <div class="nav__brand">
+        <span class="nav__title">Tasker5000</span>
+        <p class="nav__tagline">Neuroadaptive sprint console</p>
+      </div>
+      <div class="nav__links">
+        <a class="nav__link" href="#capacity">Capacity Input</a>
+        <a class="nav__link" href="#sprint">Sprint HUD</a>
+        <a class="nav__link" href="#charts">Charts</a>
+        <a class="nav__link" href="#timeline">Timeline</a>
+      </div>
+    </nav>
+
     <div class="hud-section">
       <div class="mode-banner" id="modeBanner">Mode: —</div>
       <div class="hud-grid">
@@ -40,17 +52,65 @@
         <span class="badge" id="parkedCount">Parked: —</span>
         <span class="badge" id="sameDayCount">Same-Day Required: —</span>
       </div>
-      <button id="startButton" class="button button--compact" type="button">🚀 Start Sprint</button>
+      <div class="hud-actions">
+        <button id="startButton" class="button button--compact" type="button">🚀 Start Sprint</button>
+        <button id="fetchLanesButton" class="button button--ghost button--compact" type="button">🔁 Refresh Lanes</button>
+      </div>
     </div>
   </header>
 
   <main class="page">
-    <header class="page__header">
-      <h1 class="page__title">FastAPI Sprint Dashboard</h1>
-      <p class="page__subtitle">Kick off a sprint and review the results.</p>
+    <header class="page__header" id="capacity">
+      <h1 class="page__title">Sprint Control Center</h1>
+      <p class="page__subtitle">Enter your capacity, launch a sprint, and manage charts from a single screen.</p>
     </header>
 
-    <section class="card" aria-live="polite">
+    <section class="card card--panel" aria-labelledby="capacity-form-title">
+      <div class="card__title-row">
+        <h2 id="capacity-form-title" class="card__title">Capacity input</h2>
+        <p class="card__hint">Tune energy, mental state, and workload before starting.</p>
+      </div>
+      <form id="capacityForm" class="capacity-form">
+        <div class="capacity-form__grid">
+          <label class="input-group">
+            <span class="label">Energy (physical)</span>
+            <input id="energyInput" type="range" min="0" max="1" step="0.05" value="0.8" aria-label="Physical energy" />
+            <span id="energyValue" class="input-value">0.8</span>
+          </label>
+          <label class="input-group">
+            <span class="label">Mental focus</span>
+            <input id="mentalInput" type="range" min="0" max="1" step="0.05" value="0.9" aria-label="Mental focus" />
+            <span id="mentalValue" class="input-value">0.9</span>
+          </label>
+          <label class="input-group">
+            <span class="label">Task difficulty</span>
+            <input id="difficultyInput" type="range" min="0" max="1" step="0.05" value="0.5" aria-label="Task difficulty" />
+            <span id="difficultyValue" class="input-value">0.5</span>
+          </label>
+          <label class="input-group">
+            <span class="label">Backlog load</span>
+            <input id="backlogInput" type="number" min="0" max="120" step="1" value="5" aria-label="Backlog load" />
+            <span class="input-help">Approximate open items</span>
+          </label>
+          <label class="input-group">
+            <span class="label">Anxiety/Guilt</span>
+            <input id="anxietyInput" type="range" min="0" max="1" step="0.05" value="0.05" aria-label="Anxiety and guilt" />
+            <span id="anxietyValue" class="input-value">0.05</span>
+          </label>
+          <label class="input-group">
+            <span class="label">Availability (hours)</span>
+            <input id="availabilityInput" type="number" min="1" max="12" step="0.5" value="6" aria-label="Availability hours" />
+            <span class="input-help">Time you can give this sprint</span>
+          </label>
+        </div>
+        <div class="capacity-form__actions">
+          <button class="button" type="submit">Update capacity &amp; start sprint</button>
+          <p class="status status--inline">Values sync directly into the capacity engine payload.</p>
+        </div>
+      </form>
+    </section>
+
+    <section class="card" aria-live="polite" id="sprint">
       <div class="card__row">
         <div>
           <p class="label">Mode</p>
@@ -77,9 +137,8 @@
       </div>
     </section>
 
-    <section class="card">
+    <section class="card" id="charts">
       <h2 class="card__title">Controls</h2>
-      <!-- Pre element makes the JSON easy to read and copy -->
       <pre id="controlsJson" class="code">Waiting for response…</pre>
     </section>
 
@@ -99,6 +158,11 @@
         </div>
         <div class="chart-card__meta" id="chartMeta"></div>
         <p id="fmcaAction" class="chart-card__action">FMCA action: —</p>
+        <div class="chart-controls" aria-label="Chart management">
+          <button class="pill-button" type="button" data-chart-action="park">Park chart</button>
+          <button class="pill-button" type="button" data-chart-action="escalate">Escalate</button>
+          <button class="pill-button" type="button" data-chart-action="resolve">Resolve</button>
+        </div>
       </div>
 
       <details class="timeline-log" id="fmcaTimelinePanel">
@@ -109,14 +173,17 @@
       <p id="carouselStatus" class="status status--inline">Load a sprint to begin.</p>
     </section>
 
-    <section class="card">
-      <h2 class="card__title">Charts</h2>
+    <section class="card" aria-labelledby="charts-list-title">
+      <div class="card__title-row">
+        <h2 id="charts-list-title" class="card__title">Charts</h2>
+        <p class="card__hint">Track active, parked, and escalated items.</p>
+      </div>
       <ul id="chartsList" class="list list--stacked">No charts yet.</ul>
     </section>
 
-    <section class="card timeline-card">
+    <section class="card timeline-card" id="timeline">
       <div class="timeline-card__heading">
-        <h2 class="card__title">Timeline</h2>
+        <h2 class="card__title">Sprint Timeline</h2>
         <p class="card__hint">Actions from FMCA will appear here after you start.</p>
       </div>
       <ul id="timelineList" class="list list--timeline">No steps yet.</ul>
@@ -125,6 +192,6 @@
     <p id="statusMessage" class="status">Ready.</p>
   </main>
 
-  <script src="app.js"></script>
+  <script src="/static/app.js"></script>
 </body>
 </html>
